--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Runtime requirements:
 
 Build requirements:
   cygwin-1.5.24-2
-  cygport-0.3.1-1
+  cygport-0.3.5-1
   perl-5.8.7-5
   perl-Module-Build-0.2808-1
   wx26-devel-2.6.4-1
@@ -23,15 +23,15 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack perl-Alien-wxWidgets-0.31-X-src.tar.bz2
+  unpack perl-Alien-wxWidgets-0.32-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./perl-Alien-wxWidgets-0.31-X.cygport all
+  cygport ./perl-Alien-wxWidgets-0.32-X.cygport all
 
 This will create:
-  /usr/src/perl-Alien-wxWidgets-0.31-X-src.tar.bz2
-  /usr/src/perl-Alien-wxWidgets-0.31-X.tar.bz2
+  /usr/src/perl-Alien-wxWidgets-0.32-X-src.tar.bz2
+  /usr/src/perl-Alien-wxWidgets-0.32-X.tar.bz2
 
 -------------------------------------------
 
@@ -46,15 +46,18 @@ Files included in the binary package:
   /usr/lib/perl5/vendor_perl/5.8/cygwin/Alien/wxWidgets/Config/x11_2_8_4_gcc_3_4.pm
   /usr/lib/perl5/vendor_perl/5.8/cygwin/Alien/wxWidgets/Utility.pm
   /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/Alien/wxWidgets/.packlist
-  /usr/share/doc/Cygwin/perl-Alien-wxWidgets-0.31.README
-  /usr/share/doc/perl-Alien-wxWidgets-0.31/Changes
-  /usr/share/doc/perl-Alien-wxWidgets-0.31/README.txt
+  /usr/share/doc/Cygwin/perl-Alien-wxWidgets-0.32.README
+  /usr/share/doc/perl-Alien-wxWidgets-0.32/Changes
+  /usr/share/doc/perl-Alien-wxWidgets-0.32/README.txt
   /usr/share/man/man3/Alien.wxWidgets.3pm.gz
   /usr/share/man/man3/Alien.wxWidgets.Utility.3pm.gz
 
 ------------------
 
 Port Notes:
+
+----- version 0.32-1 -----
+Version bump.
 
 ----- version 0.31-1 -----
 Version bump, with wx-2.8 support.
