--- a/README
+++ b/README
@@ -4,10 +4,10 @@ Perl module for detecting and accessing wxWidgets system configurations.
 
 Runtime requirements:
   perl-5.10.0-5
-  libwx_gtk2u2.8-devel-2.8.10.1-1
+  libwx_gtk2u2.8-devel-2.8.10.1-2
 
 Build requirements:
-  cygport-0.9.9-1
+  cygport-0.9.10-1
 
 Canonical homepage:
   http://search.cpan.org/dist/Alien-wxWidgets/
@@ -18,19 +18,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack perl-Alien-wxWidgets-0.44-X-src.tar.bz2
+  unpack perl-Alien-wxWidgets-0.47-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./perl-Alien-wxWidgets-0.44-X.cygport all
+  cygport ./perl-Alien-wxWidgets-0.47-X.cygport all
 
 This will create:
-  /usr/src/perl-Alien-wxWidgets-0.44-X-src.tar.bz2
-  /usr/src/perl-Alien-wxWidgets-0.44-X.tar.bz2
+  /usr/src/perl-Alien-wxWidgets-0.47-X-src.tar.bz2
+  /usr/src/perl-Alien-wxWidgets-0.47-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 0.47-1 -----
+Version bump.
 
 ----- version 0.44-1 -----
 Version bump.
